--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
 		<activity android:name=".ScheduleViewActivity"/>
 		<activity android:name=".ScheduleEditActivity"/>
 		<activity android:name=".DayScheduleViewActivity"/>
+		<activity android:name=".LessonEditActivity"/>
 	</application>
 
 </manifest>
