Schedule part is ended
Часть, связанная с расписанием (редактирование и просмотр расписание, редактирование и просмотр домашнего задания), завершена.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
 		<activity android:name=".ScheduleEditActivity"/>
 		<activity android:name=".DayScheduleViewActivity"/>
 		<activity android:name=".LessonEditActivity"/>
+		<activity android:name=".TaskEditActivity"/>
 	</application>
 
 </manifest>
